tests/failing/too_many_args.rgo
int: @/int
exit: @/exit

foo: (x: int, y: int) {
    exit(0)
}
foo(1, 2, 3)
